# gtask-example

./: README.md  meson.build  org.gnome.Gtask-Example.json
data/: meson.build  org.gnome.Gtask-Example.appdata.xml.in  org.gnome.Gtask-Example.desktop.in  org.gnome.Gtask-Example.gschema.xml
po/: POTFILES  meson.build
src/: gtask-example-window.c  gtask-example-window.h  gtask-example-window.ui  gtask-example.gresource.xml  main.c  meson.build
